welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  
 var occurences = new Array[Int](nums)
 occurences.fill(0)
  
 return false
}